--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <title>Ty Frade</title>
-  <h1>Hello, Code School!!.</h1>
+  <h1>Hello, Code School!</h1>
   <ul>
     <li>Javascript</li>
     <li>Angular</li>
